# img2txt

./: CMakeLists.txt  LICENSE
dep/stb_image/: CMakeLists.txt
dep/stb_image/src/: stb_image.c
src/: main.c
